// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`17428.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
(there is no {{\`\${activityType === '' ? 'activity' : ''}\${activityType === '' && costCenter === '' ? ' or ' : ''}\${costCenter === '' ? 'cost center' : ''}\`}})

=====================================output=====================================
(there is no
{{
  \`\${activityType === "" ? "activity" : ""}\${activityType === "" && costCenter === "" ? " or " : ""}\${costCenter === "" ? "cost center" : ""}\`
}})

================================================================================
`;

exports[`18939.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{ "{{num_of_selected_files}} / {{num_of_total_files}} files selected" | translate: {num_of_selected_files: 20, num_of_total_files: 30} }}

=====================================output=====================================
{{
  "{{num_of_selected_files}} / {{num_of_total_files}} files selected"
    | translate: { num_of_selected_files: 20, num_of_total_files: 30 }
}}

================================================================================
`;

exports[`block.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
@for (option of availableOwners?.(); track option) {
  <mat-option [value]="option.id">
    {{ option.name }}@{{ option.domain }}
  </mat-option>
}

=====================================output=====================================
@for (option of availableOwners?.(); track option) {
  <mat-option [value]="option.id">
    {{ option.name }}@{{ option.domain }}
  </mat-option>
}

================================================================================
`;

exports[`comments.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{a() // comment }}

=====================================output=====================================
{{
  a() // comment
}}

================================================================================
`;

exports[`non-null-assertion.html format 1`] = `
====================================options=====================================
parsers: ["angular"]
                                                      printWidth: 80 (default) |
=====================================input======================================
{{ foo?.bar!.bam }}
{{ (foo?.bar)!.bam }}
{{ (foo?.bar!).bam }}

=====================================output=====================================
{{ foo?.bar!.bam }}
{{ (foo?.bar)!.bam }}
{{ (foo?.bar!).bam }}

================================================================================
`;
